--- a/src/DocFXMustache.csproj
+++ b/src/DocFXMustache.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="VYaml" Version="1.2.0" />
     <PackageReference Include="ZString" Version="2.6.0" />
     <PackageReference Include="Stubble.Core" Version="1.10.8" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
